@@ -140,6 +140,8 @@
                                     <label class="control-label sr-only" for="street-city">Street City</label>
                                     <input id="street-city" name="street-city" placeholder="City" class="form-control input-md" required="" type="text">
 
+                                    <label class="control-label sr-only" for="zip-code">Zip Code</label>
+                                    <input id="zip-code" name="zip-code" placeholder="Zip Code" class="form-control input-md" required="" type="text">
 
                                     <!-- State Select -->
                                     <label class="control-label sr-only" for="address-state">Address State</label>
