@@ -1,3 +1,7 @@
+## 2016-11-01
+• Removed form-control margin top 8px on app.css due to conflict
+• Removed tab-pane class to avoid conflicts
+
 ## 2016-10-31
 • Updated edit-profile.html
 • Updated app.css to fix navigation from disappearing on smaller screens
